# mseedlib

./: .gitignore  README-pypi.md  README.md  development.txt  hatch_build_libmseed.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build_wheels.yml  docker_update_description.yml  release.yml
examples/: read_numpy.py  stream_stats.py  stream_timewindow.py  write_with_buffer.py
mseedlib/: __init__.py  __version__.py  clib.py  definitions.py  exceptions.py  msrecord.py  msrecord_buffer_reader.py  msrecord_reader.py  mstracelist.py  util.py
src/mseedlib/: __init__.py  __version__.py  clib.py  definitions.py  exceptions.py  msrecord.py  msrecord_buffer_compare.py  msrecord_buffer_reader.py  msrecord_reader.py  mstracelist.py  util.py
tests/: conftest.py  test_msrecord.py  test_msrecord_buffer_compare.py  test_msrecord_buffer_reader.py  test_msrecord_reader.py  test_mstracelist.py
tests/data/: packtest_sine2000.mseed3  packtest_sine500.mseed2  packtest_sine500.mseed3  testdata-COLA-signal.mseed2  testdata-COLA-signal.mseed3
