[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mseedlib"
description = "A Python package for reading and writing miniSEED formatted data"
authors = [
    { name = "EarthScope Data Services", email = "software@earthscope.org" },
]
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["seismology", "miniseed", "mseed", "data", "waveform", "seismic"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Other",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/EarthScope/mseedlib"
Issues = "https://github.com/EarthScope/mseedlib/issues"

[tool.hatch.version]
path = "src/mseedlib/__version__.py"

[tool.hatch.build]
exclude = [
    "src/mseedlib/libmseed/test/*",
    "src/mseedlib/libmseed/doc/*",
    "src/mseedlib/libmseed/example/*",
]
artifacts = [
  "src/mseedlib/*.so",
  "src/mseedlib/*.dylib",
  "src/mseedlib/*.dll",
]

#[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build_libmseed.py"

[tool.hatch.build.targets.wheel]
exclude = ['src/mseedlib/libmseed']

[tool.pytest.ini_options]
pythonpath = ["src"]
