[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "mseedlib"
description = "⚠️ DEPRECATED: This project is no longer maintained, use pymseed instead"
authors = [
    { name = "EarthScope Data Services", email = "software@earthscope.org" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["seismology", "miniseed", "mseed", "data", "waveform", "seismic", "deprecated"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Other",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "black==25.1.0",
]
numpy = [
    "numpy==2.0.2",
]

[project.urls]
Homepage = "https://github.com/EarthScope/mseedlib"

[tool.hatch.version]
path = "src/mseedlib/__version__.py"

[tool.hatch.build]
exclude = [
    "src/mseedlib/libmseed/test/*",
    "src/mseedlib/libmseed/doc/*",
    "src/mseedlib/libmseed/example/*",
]
artifacts = [
  "src/mseedlib/libmseed.so",
  "src/mseedlib/libmseed.dylib",
  "src/mseedlib/libmseed.dll",
  "src/mseedlib/libmseed.h",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build_libmseed.py"

[tool.hatch.build.targets.wheel]
exclude = ['src/mseedlib/libmseed']

[tool.pytest.ini_options]
pythonpath = ["src"]

# Limit cibuildwheel to CPython implementations
[tool.cibuildwheel]
build = "cp*"
